# idor-lens

./: CHANGELOG.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT.md  PROJECT_MEMORY.md  README.md  RELEASE.md  ROADMAP.md  UPDATE.md  pyproject.toml  requirements-dev.txt
docs/: ci-github-actions.md  idor-lens.schema.json  spec-cookbook.md
examples/github-actions/: idor-lens-regression.yml
src/idor_lens/: cli.py  compare.py  findings.py  json_paths.py  jsonl.py  junit.py  matrix.py  report.py  runner.py  sarif.py  schema.py  spec.py  summarize.py  template.py  validate.py
tests/: test_compare.py  test_init.py  test_jsonl.py  test_junit.py  test_report.py  test_runner.py  test_sarif.py  test_schema.py  test_smoke.py  test_summarize.py  test_validate.py
